--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,21 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-145735502-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-145735502-1');
+    </script>
+
     <!-- <link rel="stylesheet" href="css/main.css" /> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
